@@ -15,6 +15,7 @@
 * Fixed copyright dates on src/smaSHeM.{cpp,h}
 
 0.2 - 0.3
+* Added config.in
 
 0.1 - 0.2
 
